--- a/.github/workflows/repack-app.yml
+++ b/.github/workflows/repack-app.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+      - name: Install dependencies
+        run: bun install
 
       - name: Repack app with artifact management
         uses: expo/actions/repack-app-artifact@main
